Bug 1809574 - Use hit-testing tree to determine fixed position handoff. r=botond a=pascalc

Use the hit-testing tree to determine the APZC to handoff overscroll to
if the current APZC is in a fixed position subtree.

Differential Revision: https://phabricator.services.mozilla.com/D166787